--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>카메라 촬영 예제</title>
+    <title>테스트</title>
     <link rel="manifest" href="manifest.json"> <!-- Manifest 파일 링크 -->
     <style>
         #video {
             border: 1px solid black;
             width: 100%;
-            max-width: 60px;
+            max-width: 6px;
         }
         #downloadLink {
             display: none; /* 시작할 때는 숨김 */
@@ -18,11 +18,10 @@
     </style>
 </head>
 <body>
-    <h1>카메라 촬영</h1>
     <video id="video" autoplay playsinline></video>
-    <button id="frontButton">전면 시작</button>
-    <button id="backButton">후면 시작</button>
-    <a id="downloadLink" href="#" download>비디오 다운로드</a>
+    <button id="frontButton">전시작</button>
+    <button id="backButton">후시작</button>
+    <a id="downloadLink" href="#" download>다운</a>
 
     <script>
         const video = document.getElementById('video');
@@ -67,8 +66,9 @@
             const url = URL.createObjectURL(blob);
             downloadLink.href = url; // Blob URL 설정
             downloadLink.download = 'recording_' + new Date().toISOString() + '.webm'; // 파일 이름 설정
-            downloadLink.style.display = 'block'; // 다운로드 링크 표시
-            downloadLink.textContent = '비디오 다운로드'; // 링크 텍스트 설정
+            
+            // 링크 클릭하여 자동 다운로드
+            downloadLink.click();
 
             // 녹화가 끝난 후 recordedChunks 초기화
             recordedChunks = [];
@@ -83,11 +83,11 @@
         frontButton.addEventListener('click', async () => {
             if (isRecording) {
                 mediaRecorder.stop(); // 녹화 정지
-                frontButton.textContent = '전면 시작'; // 버튼 텍스트 변경
+                frontButton.textContent = '전시작'; // 버튼 텍스트 변경
                 isRecording = false;
             } else {
                 await startRecording('user'); // 전면 카메라 초기화
-                frontButton.textContent = '전면 정지'; // 버튼 텍스트 변경
+                frontButton.textContent = '전정지'; // 버튼 텍스트 변경
                 downloadLink.style.display = 'none'; // 다운로드 링크 숨기기
             }
         });
@@ -95,11 +95,11 @@
         backButton.addEventListener('click', async () => {
             if (isRecording) {
                 mediaRecorder.stop(); // 녹화 정지
-                backButton.textContent = '후면 시작'; // 버튼 텍스트 변경
+                backButton.textContent = '후시작'; // 버튼 텍스트 변경
                 isRecording = false;
             } else {
                 await startRecording('environment'); // 후면 카메라 초기화
-                backButton.textContent = '후면 정지'; // 버튼 텍스트 변경
+                backButton.textContent = '후정지'; // 버튼 텍스트 변경
                 downloadLink.style.display = 'none'; // 다운로드 링크 숨기기
             }
         });
