--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         #video {
             border: 1px solid black;
             width: 100%;
-            max-width: 6px;
+            max-width: 6px; /* 비디오 크기 조정 */
         }
         #downloadLink {
             display: none; /* 시작할 때는 숨김 */
@@ -36,7 +36,11 @@
         // 카메라 스트림을 가져옵니다.
         async function initCamera(facingMode) {
             const constraints = {
-                video: { facingMode: facingMode }
+                video: {
+                    facingMode: facingMode,
+                    width: { ideal: 1280 }, // 고화질 너비 설정
+                    height: { ideal: 720 }   // 고화질 높이 설정
+                }
             };
             try {
                 if (currentStream) {
