--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>고화질 녹화 테스트</title>
+    <title>테스트</title>
     <link rel="manifest" href="manifest.json"> <!-- Manifest 파일 링크 -->
     <style>
         #video {
             border: 1px solid black;
             width: 100%;
-            max-width: 600px; /* 비디오 크기 조정 */
+            max-width: 60px; /* 비디오 크기 조정 */
         }
         #downloadLink {
             display: none; /* 시작할 때는 숨김 */
@@ -20,8 +20,8 @@
 <body>
     <video id="video" autoplay playsinline></video>
     <button id="frontButton">전시작</button>
-    <button id="backButton">2후시작</button>
-    <a id="downloadLink" href="#" download>다운로드</a>
+    <button id="backButton">3후시작</button>
+    <a id="downloadLink" href="#" download>다운</a>
 
     <script>
         const video = document.getElementById('video');
@@ -33,14 +33,13 @@
         let isRecording = false;
         let currentStream;
 
-        // 카메라 스트림을 가져옵니다.
         async function initCamera(facingMode) {
             const constraints = {
                 video: {
                     facingMode: facingMode,
-                    width: { ideal: 1920 }, // 고화질 너비 설정 (Full HD)
-                    height: { ideal: 1080 }, // 고화질 높이 설정 (Full HD)
-                    frameRate: { ideal: 30 } // 프레임 속도 설정
+                    width: { ideal: 1280 }, // 1280x720 해상도
+                    height: { ideal: 720 },
+                    frameRate: { ideal: 24 } // 프레임 속도 24로 조정
                 }
             };
             try {
@@ -52,8 +51,8 @@
                 video.srcObject = currentStream;
 
                 mediaRecorder = new MediaRecorder(currentStream, {
-                    mimeType: 'video/webm; codecs=vp9', // VP9 코덱 사용
-                    videoBitsPerSecond: 2500000 // 비트레이트 설정 (2.5 Mbps)
+                    mimeType: 'video/webm; codecs=vp9',
+                    videoBitsPerSecond: 1500000 // 비트레이트를 1.5 Mbps로 조정
                 });
                 mediaRecorder.ondataavailable = handleDataAvailable;
                 mediaRecorder.onstop = handleStop;
@@ -103,11 +102,11 @@
         backButton.addEventListener('click', async () => {
             if (isRecording) {
                 mediaRecorder.stop(); // 녹화 정지
-                backButton.textContent = '2후시작'; // 버튼 텍스트 변경
+                backButton.textContent = '3후시작'; // 버튼 텍스트 변경
                 isRecording = false;
             } else {
                 await startRecording('environment'); // 후면 카메라 초기화
-                backButton.textContent = '2후정지'; // 버튼 텍스트 변경
+                backButton.textContent = '3후정지'; // 버튼 텍스트 변경
                 downloadLink.style.display = 'none'; // 다운로드 링크 숨기기
             }
         });
