--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         #video {
             border: 1px solid black;
             width: 100%;
-            max-width: 60px; /* 비디오 크기 조정 */
+            max-width: 6px; /* 비디오 크기 조정 */
         }
         #downloadLink {
             display: none; /* 시작할 때는 숨김 */
@@ -20,7 +20,7 @@
 <body>
     <video id="video" autoplay playsinline></video>
     <button id="frontButton">전시작</button>
-    <button id="backButton">3후시작</button>
+    <button id="backButton">4후시작</button>
     <a id="downloadLink" href="#" download>다운</a>
 
     <script>
@@ -33,13 +33,13 @@
         let isRecording = false;
         let currentStream;
 
+        // 카메라 스트림을 가져옵니다.
         async function initCamera(facingMode) {
             const constraints = {
                 video: {
                     facingMode: facingMode,
-                    width: { ideal: 1280 }, // 1280x720 해상도
-                    height: { ideal: 720 },
-                    frameRate: { ideal: 24 } // 프레임 속도 24로 조정
+                    width: { ideal: 1280 }, // 고화질 너비 설정
+                    height: { ideal: 720 }   // 고화질 높이 설정
                 }
             };
             try {
@@ -50,10 +50,7 @@
                 currentStream = await navigator.mediaDevices.getUserMedia(constraints);
                 video.srcObject = currentStream;
 
-                mediaRecorder = new MediaRecorder(currentStream, {
-                    mimeType: 'video/webm; codecs=vp9',
-                    videoBitsPerSecond: 1500000 // 비트레이트를 1.5 Mbps로 조정
-                });
+                mediaRecorder = new MediaRecorder(currentStream);
                 mediaRecorder.ondataavailable = handleDataAvailable;
                 mediaRecorder.onstop = handleStop;
             } catch (error) {
@@ -102,11 +99,11 @@
         backButton.addEventListener('click', async () => {
             if (isRecording) {
                 mediaRecorder.stop(); // 녹화 정지
-                backButton.textContent = '3후시작'; // 버튼 텍스트 변경
+                backButton.textContent = '4후시작'; // 버튼 텍스트 변경
                 isRecording = false;
             } else {
                 await startRecording('environment'); // 후면 카메라 초기화
-                backButton.textContent = '3후정지'; // 버튼 텍스트 변경
+                backButton.textContent = '4후정지'; // 버튼 텍스트 변경
                 downloadLink.style.display = 'none'; // 다운로드 링크 숨기기
             }
         });
