--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>고화질 녹화 테스트</title>
+    <title>테스트</title>
     <link rel="manifest" href="manifest.json"> <!-- Manifest 파일 링크 -->
     <style>
         #video {
@@ -20,7 +20,7 @@
 <body>
     <video id="video" autoplay playsinline></video>
     <button id="frontButton">전시작</button>
-    <button id="backButton">5후시작</button>
+    <button id="backButton">후시작</button>
     <a id="downloadLink" href="#" download>다운로드</a>
 
     <script>
@@ -103,11 +103,11 @@
         backButton.addEventListener('click', async () => {
             if (isRecording) {
                 mediaRecorder.stop(); // 녹화 정지
-                backButton.textContent = '5후시작'; // 버튼 텍스트 변경
+                backButton.textContent = '후시작'; // 버튼 텍스트 변경
                 isRecording = false;
             } else {
                 await startRecording('environment'); // 후면 카메라 초기화
-                backButton.textContent = '5후정지'; // 버튼 텍스트 변경
+                backButton.textContent = '후정지'; // 버튼 텍스트 변경
                 downloadLink.style.display = 'none'; // 다운로드 링크 숨기기
             }
         });
